<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"


    android:weightSum="1"
    android:orientation="horizontal"
    android:padding="@dimen/padding_pantalla"

    tools:context=".MainActivity">




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        >

        <TextView
            style="@style/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/jugador1"
            style="@style/boton_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/un_jugador" />

        <RadioGroup
            android:id="@+id/config_dificultad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/facil"
                style="@style/radio"
                android:text="@string/facil" />

            <RadioButton
                android:id="@+id/normal"
                style="@style/radio"
                android:checked="true"
                android:text="@string/medio" />

            <RadioButton
                android:id="@+id/imposible"
                style="@style/radio"
                android:text="@string/imposible" />
        </RadioGroup>

        <Button

            android:id="@+id/dos_jug"
            style="@style/boton_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dos_jugadores" />


    </LinearLayout>


    <Space
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_weight="1.7"/>

    <GridLayout


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3"

        >

        <ImageView
            android:id="@+id/a1"
            style="@style/casillas"
            android:src="@drawable/aspa"
             />

        <ImageView
            android:id="@+id/a2"
            style="@style/casillas"
            android:src="@drawable/circulo"

             />

        <ImageView
            android:id="@+id/a3"
            style="@style/casillas" />

        <ImageView
            android:id="@+id/b1"
            style="@style/casillas"
            android:src="@drawable/aspa"/>

        <ImageView
            android:id="@+id/b2"
            style="@style/casillas" />

        <ImageView
            android:id="@+id/b3"
            style="@style/casillas"
            android:src="@drawable/circulo"/>

        <ImageView
            android:id="@+id/c1"
            style="@style/casillas"
            android:src="@drawable/aspa"/>

        <ImageView
            android:id="@+id/c2"
            style="@style/casillas" />

        <ImageView
            android:id="@+id/c3"
            style="@style/casillas" />


    </GridLayout>


</LinearLayout>









